    Fixed H.264 import problem using mp4creator
    Fixed a number of tool/compiler related problems
    Mp4creator will no longer create ISMA compliant OD and BIFs tracks, 
     as well as IODs unless -make-isma-10-compliant flag is used
    Added H.264 encoding using x264 to mp4live
    Added H.264, ffmpeg mpeg-4 b frames encoding to mp4live
    Added mp4videoinfo dump

12/03/04 Version 1.2
    Added 3GP, .mov support to mp4v2
    Added ffmpeg decoder support (MPEG-2, H.264, MPEG-4, Sorenson, AMR)
    Added H.264 support to mp4v2, mp4creator, player, mpeg2t
    Added --disable-xvid flag to bootstrap
    Better checking for compile flags in configure
    Fixes for gcc 3.4
    Made mp4info work with most .mov files
    Changed player plugin format to pass what media we're looking from
        (MP4 FILE, MPEG FILE, RTP, etc).
    Fixed 5.1 downconvert to stereo in player
    Mac OSX support for player
    player support for 1:1 aspect ratio
    Added AMR and H.263(rfc2429) hinters and RTP plugins
    player support for H.263 and AMR through ffmpeg
    Updated some of UCL RTP library 1.2.16 changes
    Rewrote player audio renderer for long term sync
    Fixes for player rtp base class for long term sync
    Allow player to handle timestamp discrepancies.
    Removed libmpeg3, added mpeg program stream reader code
    Multi-output mp4live from Cesar Gonzalez

05/17/04 version 1.1
    Added no-overwrite mode in mp4live
    if present, use libid3 to read ID tags
    Fixed problem with player a/v sync when relaying through DSS
    Added input video filters to mp4live
    Added player plugins for libac3 and libmpeg2 (must be installed before configuration)
    Fixed sync flag indication for mp4creator using avi files.
    Fixed so that 64 bit machines could be used easier.  Enhanced macros for
      indication of 64 bits, and for 64 bit printf formatting.
    Changed PACKAGE and VERSION for mpeg4ip to MPEG4IP_PACKAGE and
      MPEG4IP_VERSION