@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(mpeg4ip, 1.2.18)
+AC_INIT(mpeg4ip, 1.2.19)
 AM_CONFIG_HEADER(mpeg4ip_config.h)
 dnl Prevent user from running just ./configure
 AC_CHECK_FILE(./bootstrapped, [did_bootstrap=yes], [did_bootstrap=no])
@@ -608,8 +608,6 @@ if test x$disable_gtk_glib = xno; then
       AC_DEFINE(HAVE_GTK_2_0, 1, [Have GTK 2.0 on system])
       AC_DEFINE(HAVE_GTK, 1, [Have GTK on system])
       glib_gtk=yes
-   else
-      haveglib20=no
    fi
   fi
   dnl If we're going to check for GLIB, we most likely need the real path
@@ -622,6 +620,16 @@ if test x$disable_gtk_glib = xno; then
   AC_CHECK_HEADERS(glib.h)
   CFLAGS="$save_CFLAG"
   CPPFLAGS="$save_CPPFLAG"
+fi
+if test x$glib_gtk = xno; then
+  GLIB_CFLAGS=""
+  GLIB_LIBS=""
+  AC_SUBST(GLIB_CFLAGS)
+  AC_SUBST(GLIB_LIBS)
+      GTK_CFLAGS=""
+      GTK_LIBS=""
+      AC_SUBST(GTK_CFLAGS)
+      AC_SUBST(GTK_LIBS)
 fi
 AM_CONDITIONAL(NO_GLIB_GTK, test x$glib_gtk = xno)
 
