@@ -1,6 +1,6 @@
 #define MPEG4IP_PACKAGE "mpeg4ip"
-#define MPEG4IP_VERSION "1.2.18"
+#define MPEG4IP_VERSION "1.2.19"
 #define MPEG4IP_MAJOR_VERSION 0x1
 #define MPEG4IP_MINOR_VERSION 0x2
-#define MPEG4IP_CVS_VERSION 0x18
+#define MPEG4IP_CVS_VERSION 0x19
 #define MPEG4IP_HEX_VERSION ((MPEG4IP_MAJOR_VERSION << 16) | (MPEG4IP_MINOR_VERSION << 8) | MPEG4IP_CVS_VERSION)
