@@ -5,7 +5,6 @@ SUBDIRS = iptv mpeg4vol mpeg2 h264
 endif
 
 EXTRA_DIST = repository_sync.sh \
-	dummy_glib.m4 \
 	replaceversion \
 	sdl_update.sh \
 	testlame.sh \
