@@ -10,6 +10,8 @@ xx/xx/05 Version 1.3
     Added H.264 encoding using x264 to mp4live
     Added H.264, ffmpeg mpeg-4 b frames encoding to mp4live
     Added mp4videoinfo dump
+    Added G.711 codec for player and mp4live
+    Removed requirement installing lame and faac for mp4live
 
 12/03/04 Version 1.2
     Added 3GP, .mov support to mp4v2
